--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pasteleria-mil-sabores",
   "private": true,
+  "homepage": "https://tomasvaldivia20.github.io/Pasteleria-Mil-Sabores-VersionReact1/src/pages/Home.jsx",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -11,7 +12,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "api": "json-server --watch db.json --port 3001",
-    "server": "json-server --watch db.json --port 4000"
+    "server": "json-server --watch db.json --port 4000",
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
@@ -21,6 +24,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
@@ -29,7 +34,9 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
+    "jsdom": "^27.0.1",
     "json-server": "^1.0.0-beta.3",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vitest": "^4.0.5"
   }
 }
